syntax = "proto3";

package com.goodcover.akkart;
import "scalapb/scalapb.proto";

option (scalapb.options) = {
//  // All classes that extend a sealed trait need to be in the same Scala
//  // file, so we set single_file to true.
  single_file: true

  preserve_unknown_fields: false

  //
//  import: "shared.proto.GenericTypeMapper._"
};

message PersistRepr {
  string id = 1;
  bytes payload = 2;
}

message ScheduleEntryAdded {
  string entryId = 2;
  string correlationId = 3;
  int64 dueDate = 4;
  int64 timestamp = 5;
}

message ScheduleEntryFired {
  string entryId = 2;
  string correlationId = 3;
  int64 dueDate = 4;
  int64 timestamp = 5;
}

message ScheduleEntryRemoved {
  string entryId = 2;
  int64 timestamp = 3;
  string correlationId = 4;
}

message EntityCommand {
  string entityId = 1;
  bytes commandBytes = 2;
}

message HandleCommand {
  bytes commandBytes = 1;
}

message CommandResult {
  bytes resultBytes = 1;
}
